2009-06-07  Aurélien Bompard <aurelien@bompard.org>

	* renderer.php: use ['savedir'] as suggested on the wiki page

2009-06-07  Aurélien Bompard <aurelien@bompard.org>

	* ChangeLog, info.txt: release

2009-06-07  Aurélien Bompard <aurelien@bompard.org>

	* renderer.php: add patch by Korsani

2009-06-07  Aurélien Bompard <aurelien@bompard.org>

	* renderer.php: typo

2009-02-11  Aurélien Bompard <aurelien@bompard.org>

	* info.txt, renderer.php: Make the renderer class a singleton  Only
	make a single instance of the renderer. This is needed for Dokuwiki
	>= rc2009-02-06. For details, see:
	http://bugs.splitbrain.org/index.php?do=details&task_id=1598

2009-02-09  Aurélien Bompard <aurelien@bompard.org>

	* renderer.php: Revert "Create zipper on-demand"  This reverts
	commit 5e746e84b62fb0fdcd5607d7f9abc636a7710e2e.

2009-02-08  Aurélien Bompard <aurelien@bompard.org>

	* renderer.php: Create zipper on-demand

2009-01-15  Aurélien Bompard <aurelien@bompard.org>

	* ChangeLog, info.txt: prepare for new release

2009-01-15  Aurélien Bompard <aurelien@bompard.org>

	* ChangeLog, renderer.php: don't compress mimetype declaration

2008-11-11  Aurélien Bompard <aurelien@bompard.org>

	* renderer.php: more safeguards. wiki:syntax now passes validators

2008-09-28  Aurélien Bompard <aurelien@bompard.org>

	* lang/ja/lang.php, lang/ja/settings.php: Add Japanese translation
	from Ikuo Obataya. Thanks !

2008-05-07  Aurélien Bompard <aurelien@bompard.org>

	* ChangeLog, info.txt: new release

2008-05-07  Aurélien Bompard <aurelien@bompard.org>

	* ChangeLog: update ChangeLog

2008-05-07  Aurélien Bompard <aurelien@bompard.org>

	* lang/es/lang.php, lang/es/settings.php: complete spanish
	translation

2008-05-07  Aurélien Bompard <aurelien@bompard.org>

	* renderer.php, syntax.php: leftover from history cleaning

2008-05-07  Aurélien Bompard <aurelien@bompard.org>

	* lang/es/lang.php: spanish translation, 1st part

2008-05-06  Aurélien Bompard <aurelien@bompard.org>
