@@ -1,6 +1,11 @@
+2009-07-02  Aurélien Bompard <aurelien@bompard.org>
+
+	* renderer.php: Fixes from Andy Webber (thanks !)
+
 2009-06-07  Aurélien Bompard <aurelien@bompard.org>
 
-	* renderer.php: use ['savedir'] as suggested on the wiki page
+	* ChangeLog, renderer.php: use $['savedir'] as suggested on the wiki
+	page
 
 2009-06-07  Aurélien Bompard <aurelien@bompard.org>
 
